--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="warm">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>TEST</h1>
     <script type="module" src="JS/main.js"></script>
   </body>
 </html>
