--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-    <h1 class="site" id="steam">STEAM</h1>
+    <h1 class="site" id="marketplace">STEAM</h1>
+    <button class="btn">Switch Marketplace</button>
     <div class="container">
       <div class="game" id="RPG">The Witcher 3: Wild Hunt</div>
       <div class="game" id="RPG">Cyberpunk 2077</div>
