--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    <h1 class="site">Widget Marketplace</h1>
+    <h1 class="site">Steam Marketplace</h1>
     
     <!-- Theme Toggle Button -->
     <button class="btn">Switch Marketplace Theme</button>
