--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,21 +12,21 @@
     <button class="btn">Switch Marketplace Theme</button>
     
     <div class="filter-buttons">
-      <button data-filter="All">All</button>
-      <button data-filter="RPG">RPG</button>
-      <button data-filter="Rogue-like">Rogue-like</button>
-      <button data-filter="Simulation">Simulation</button>
-      <button data-filter="FPS">FPS</button>
-      <button data-filter="Platformer">Platformer</button>
-      <button data-filter="Metroidvania">Metroidvania</button>
-      <button data-filter="Party">Party</button>
-      <button data-filter="Action-Adventure">Action-Adventure</button>
-      <button data-filter="Sandbox">Sandbox</button>
-      <button data-filter="Adventure">Adventure</button>
-      <button data-filter="Battle Royale">Battle Royale</button>
-      <button data-filter="Sports">Sports</button>
-      <button data-filter="Action RPG">Action RPG</button>
-      <button data-filter="On Sale">On Sale</button>
+      <button id="All">All</button>
+      <button id="RPG">RPG</button>
+      <button id="Rogue-like">Rogue-like</button>
+      <button id="Simulation">Simulation</button>
+      <button id="FPS">FPS</button>
+      <button id="Platformer">Platformer</button>
+      <button id="Metroidvania">Metroidvania</button>
+      <button id="Party">Party</button>
+      <button id="Action-Adventure">Action-Adventure</button>
+      <button id="Sandbox">Sandbox</button>
+      <button id="Adventure">Adventure</button>
+      <button id="Battle Royale">Battle Royale</button>
+      <button id="Sports">Sports</button>
+      <button id="Action RPG">Action RPG</button>
+      <button id="On Sale">On Sale</button>
     </div>
     
     <div class="container"></div>
