--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
     <title>Game Marketplace</title>
     <link rel="stylesheet" href="/styles/style.css">
   </head>
-  <body>
+  <body class="steam">
     <h1 class="site">Game Marketplace</h1>
     
     <button class="btn">Switch Marketplace Theme</button>
