--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -31,6 +31,6 @@
     
     <div class="container"></div>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
