--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -31,6 +30,6 @@
     
     <div class="container"></div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
